package de.hhn;

/**
 * Startet den Controller.
 */
public class Main {
    public static void main(String[] args) {
        var controller = new Controller();
        controller.start();
    }
}
